Trying to fix day 12